Changelog
=========

4.11-dev - (unreleased)
-----------------------
 * Feature: added logging for missing blobs [tiberich #4702]
 * Bug fix: added script to check for missing blobs [ghicaale #4806]

4.10 - (2011-11-25)
-------------------
 * Bug fix: Set filename for image fields where missing [szabozo0 #4746]

4.9 - (2011-11-25)
------------------
 * Bug fix: Fixed previous broken egg.

4.8 - (2011-11-25)
------------------
 * Bug fix: added patch for EEA mailhost [ghicaale #4770]

4.7 - (2011-11-25)
------------------
* Feature: Added EEA mailhost configuration
  [ghicaale #4770]

4.6 - (2011-11-22)
------------------
* Added patch for Products.TinyMCE bug in utility
   [tiberich #4733]

4.5 - (2011-11-21)
------------------
* no changes

4.4 - (2011-11-21)
------------------
* Cleanup: pylint warnigns
  [voineali]

4.3 - (2011-11-19)
------------------
 * Added patch to avoid failure in missing blobs
   [tiberich]

4.2 - (2011-11-19)
------------------
* Change: Made Themes tab hidden as it already in Categorization tab
  [voineali #4694]
* Added get_oid External method to help debug blobs [tiberich]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Bug fix: Enabled resize.js [szabozo0 #4667]
* Bug fix: ignore KeyErrors when getting content for resources (avoids problems caused by
  missing base_properties in default Plone skin) [tiberich #4603]
* Bug fix: set the name of the uploaded file when quickupload is used [szabozo #4643]
* Feature: added registration of dashboard traversal to allow proper functioning of dashboard [tiberich #4624]
* Feature: use a buildout environmental variable to fix portal links in generated resources [tiberich #4603]
* Change: enabled multiple skins when saving resources [tiberich #4603]
* Bug fix: added a patch for the import step of resource registries that
  will save resources when GS profile is loaded [tiberich #4603]